# 2019vision

./: .gitignore  CMakeLists.txt  CameraInfo.cpp  CameraInfo.hpp  Goal2019.cpp  Goal2019.hpp  RPV2CameraInfo.hpp  TargetTracker.cpp  TargetTracker.hpp  TargetTracker2019.cpp  TargetTracker2019.hpp  bad_settings.sh  calibrate.cpp  camtest.cpp  good_settings.sh  precomp.hpp  vision (copy).cpp  vision.1.cpp  vision.cpp  vision.hpp  vision.tune.cpp  vision_nano.cpp  vision_nano2019.cpp  vision_sideways.cpp  vision_single.cpp  vision_single2.cpp  viz.sh
